@@ -1059,6 +1059,11 @@ argument_list|(
 literal|"hadoop.http.filter.initializers"
 argument_list|)
 decl_stmt|;
+name|boolean
+name|modifiedInitialiers
+init|=
+literal|false
+decl_stmt|;
 name|initializers
 operator|=
 name|initializers
@@ -1104,6 +1109,10 @@ operator|+
 literal|","
 operator|+
 name|initializers
+expr_stmt|;
+name|modifiedInitialiers
+operator|=
+literal|true
 expr_stmt|;
 block|}
 name|String
@@ -1160,6 +1169,10 @@ argument_list|()
 argument_list|)
 condition|)
 block|{
+name|modifiedInitialiers
+operator|=
+literal|true
+expr_stmt|;
 continue|continue;
 block|}
 name|target
@@ -1192,13 +1205,7 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-operator|!
-name|actualInitializers
-operator|.
-name|equals
-argument_list|(
-name|initializers
-argument_list|)
+name|modifiedInitialiers
 condition|)
 block|{
 name|conf
