@@ -78,6 +78,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|http
+operator|.
+name|lib
+operator|.
+name|StaticUserWebFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|security
 operator|.
 name|AuthenticationFilterInitializer
@@ -197,6 +213,26 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
 import|;
 end_import
 
@@ -427,25 +463,107 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|HashMap
+argument_list|<
 name|String
-index|[]
-name|filterInitializers
+argument_list|,
+name|String
+argument_list|>
+name|driver
 init|=
-block|{
-name|AuthenticationFilterInitializer
-operator|.
-name|class
-operator|.
-name|getName
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
 argument_list|()
-block|,
+decl_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
+literal|""
+argument_list|,
 name|TimelineAuthenticationFilterInitializer
 operator|.
 name|class
 operator|.
 name|getName
 argument_list|()
-block|,
+argument_list|)
+expr_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
+name|StaticUserWebFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|","
+operator|+
+name|StaticUserWebFilter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
+name|AuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
 name|AuthenticationFilterInitializer
 operator|.
 name|class
@@ -461,7 +579,19 @@ name|class
 operator|.
 name|getName
 argument_list|()
-block|,
+argument_list|,
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|driver
+operator|.
+name|put
+argument_list|(
 name|AuthenticationFilterInitializer
 operator|.
 name|class
@@ -477,16 +607,49 @@ name|class
 operator|.
 name|getName
 argument_list|()
-block|}
-decl_stmt|;
+argument_list|,
+name|TimelineAuthenticationFilterInitializer
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
 for|for
 control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
 name|String
-name|filterInitializer
+argument_list|,
+name|String
+argument_list|>
+name|entry
 range|:
-name|filterInitializers
+name|driver
+operator|.
+name|entrySet
+argument_list|()
 control|)
 block|{
+name|String
+name|filterInitializer
+init|=
+name|entry
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+name|String
+name|expectedValue
+init|=
+name|entry
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
 name|historyServer
 operator|=
 operator|new
@@ -531,12 +694,7 @@ argument_list|()
 decl_stmt|;
 name|assertEquals
 argument_list|(
-name|TimelineAuthenticationFilterInitializer
-operator|.
-name|class
-operator|.
-name|getName
-argument_list|()
+name|expectedValue
 argument_list|,
 name|tmp
 operator|.
